# code_snippet

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_zh.md
config/: config.toml
data/fast-cpp-csv-parser/in/: ram.csv
readme/: README_en.md
src/: CMakeLists.txt  main.cpp
src/fast-cpp-csv-parser/: fast-cpp-csv-parser.cpp  fast-cpp-csv-parser.h
src/spdlog/: spdlog.cpp  spdlog.h
src/tomlplusplus/: tomlplusplus.cpp  tomlplusplus.h
test/: CMakeLists.txt  test_config.cpp  test_csv.cpp
third-part/: CMakeLists.txt
third-part/fast-cpp-csv-parser/: CMakeLists.txt
